# jupyter-nb-starter

./: .gitignore  README.md  pyproject.toml
notebooks/: main.ipynb
