[tool.poetry]
name = "jupyter-nb-starter"
version = "0.1.0"
description = "A handy starter for projects that use Jupyter Notebook."
authors = ["Christopher Kumm <chrislkumm@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
