[project]
name = "jupyter-nb-starter"
version = "0.1.0"
description = "A handy starter for projects that use Jupyter Notebook."
authors = [
    {name = "Christopher Kumm",email = "chrislkumm@protonmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
